# orgmemory-edge

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
contracts/: sop-envelope.schema.json
docs/: roadmap.md  vision.md
docs/decisions/: 0001-standalone-tauri-rust-runtime.md  0002-consent-and-admin-boundary.md  0003-clean-room-apache-2.md
docs/guidelines/: agent-safety.md  testing-harness.md
docs/increments/active/2026-07-18-build-week-foundation/: design.md  plan.md
docs/increments/active/2026-07-18-enterprise-pilot/: design.md  plan.md
docs/specs/: enterprise-pilot.md
docs/specs/domains/: capture-to-sop.md
docs/tests/: enterprise-pilot.md
docs/tests/domains/: capture-to-sop.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: edgeBridge.ts
