[package]
name = "orgmemory-edge"
version = "0.1.0"
description = "Consent-first desktop workflow capture that turns one clean run into a reviewable SOP."
authors = ["OrgMemory Edge contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kl3inIT/orgmemory-edge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orgmemory_edge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
